// Initial Tables for 'shop'

Table users {
  id integer [pk, incrememnt]
  username varchar unique
  password varchar
  first_name varchar
  last_name varchar
  date_created datetime
  is_admin boolean

  Note: "Join to carts on username"
}

Table addresses {
  id integer [pk, increment]
  user_id integer
  street_one varchar
  street_two varchar
  city varchar
  state varchar
  zip integer
}

Table products {
  id integer [pk, increment]
  name varchar
  description text
  category_id varchar [Ref: > categories.id]
  rating integer
  price money
  active bool
}

Table carts {
  id integer [pk, increment]
  username varchar [ref: - users.username]
}

Table orders {
  number integer [pk, increment]
  date_created datetime
  status varchar
  address_id integer [ref: > addresses.id]
  customer_id varchar [ref: > users.username]
  Note: 'Status can be: "submitted" "shipped" or "fulfilled"'
}

Table categories {
  id varchar [pk]
  category_string varchar
}

Table product_images {
  id integer [pk, increment]
  product_id integer [Ref: > products.id]
  path varchar unique

  Note: "Separate table to allow for muliple images for each product."
}


Table products_carts {
  id integer [pk, increment]
  product_id varchar [ref: > products.id]
  cart_id varchar [ref: > carts.id]
  quantity integer [not null, default: 1]

  indexes {
    (product_id, cart_id) [unique]
  }
}

Table products_orders {
  id integer [pk, increment]
  product_id varchar [ref: > products.id]
  order_number integer [ref: > orders.number]
  quantity integer [not null, default: 1]

  indexes {
    (product_id, order_number) [unique]
  }
}

Table users_addresses {
  user_id integer [ref: > users.id]
  address_id integer [ref: > addresses.id]

  indexes {
    (user_id, address_id) [unique]
  }
}

